# jikgu-customs-mcp

./: .gitignore  Dockerfile  README.md  SPEC.md  pyproject.toml  requirements.txt  server.py
jikgu/: __init__.py  calculator.py  knowledge.py  rules.py
tests/: test_calculator.py
